--- a/BootstrapFigma/index.html
+++ b/BootstrapFigma/index.html
@@ -13,6 +13,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="/BootstrapFigma/css/style.css">
+  <link rel="stylesheet" href="/BootstrapFigma/css/responsive.css">
 </head>
 
 <body>
@@ -57,7 +58,7 @@
   <section>
     <div class="container">
       <div class="row">
-        <div class="col-6 my-auto banner_first">
+        <div class="col-sm-12 col-md-12 col-lg-6 my-auto banner_first">
           <h1>Collect Real & Organic <span>Instagram </span>Followers</h1>
           <p>We're the only service in the world that provides you with likes from real people. Try our free trial and
             see for yourself.</p>
@@ -65,8 +66,8 @@
 
 
         </div>
-        <div class="col-6 banner_second">
-          <img src="/BootstrapFigma/images/hero.png" alt="">
+        <div class="col-sm-12 col-md-12 col-lg-6 banner_second">
+          <img class="img-fluid" src="/BootstrapFigma/images/hero.png" alt="">
 
         </div>
       </div>
@@ -80,19 +81,19 @@
   <section>
     <div class="container instragram_container">
       <div class="row py-5 px-5">
-        <div class="col-3">
+        <div class="col-sm-12 col-md-3">
           <h3>Instagram
             Likes</h3>
         </div>
-        <div class="col-3">
+        <div class="col-sm-12 col-md-3">
           <h3>13.68M</h3>
           <p>Likes Given</p>
         </div>
-        <div class="col-3">
+        <div class="col-sm-12 col-md-3">
           <h3>12.74K</h3>
           <p>Happy Clients</p>
         </div>
-        <div class="col-3">
+        <div class="col-sm-12 col-md-3">
           <h3>3.56K</h3>
           <p>Became Famous</p>
         </div>
@@ -120,9 +121,9 @@
 
       <div class="container">
         <div class="row package justify-content-center align-items-center">
-          <div class="col-4 g-5">
+          <div class="col-sm-12 col-md-6 col-lg-4 g-5">
             <div class="p-5">
-              <img src="/BootstrapFigma/images/pakage.png" alt="">
+              <img class="img-fluid" src="/BootstrapFigma/images/pakage.png" alt="">
               <h4>Pick a package</h4>
               <p>
                 Choose the Instagram likes, followers, or views package that you're interested in. Feel free to get in
@@ -130,9 +131,9 @@
               </p>
             </div>
           </div>
-          <div class="col-4 g-5">
+          <div class="col-sm-12 col-md-6 col-lg-4 g-5">
             <div class="p-5">
-              <img src="/BootstrapFigma/images/details.png" alt="">
+              <img class="img-fluid" src="/BootstrapFigma/images/details.png" alt="">
               <h4>Enter Details</h4>
               <p>
                 We will never ask you for sensitive details such as your password. All you have to do is provide us with
@@ -140,9 +141,9 @@
               </p>
             </div>
           </div>
-          <div class="col-4 g-5">
+          <div class="col-sm-12 col-md-6 col-lg-4 g-5">
             <div class="p-5">
-              <img src="/BootstrapFigma/images/growth.png" alt="">
+              <img class="img-fluid" src="/BootstrapFigma/images/growth.png" alt="">
               <h4>See the growth</h4>
               <p>
                 All orders start within a few minutes, so you'll see growth in your Instagram account very quickly.
@@ -162,13 +163,16 @@
   <section>
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-sm-12 col-md-12 col-lg-12 ">
           <div class="video_image">
             <div class="video1">
               <img src="/BootstrapFigma/images/playbutton.png" alt="">
             </div>
-            <div class="video2">
-              <img src="/BootstrapFigma/images/videoimage.png" alt="">
+
+            <div class="col-sm-12 col-md-12 col-lg-12">
+              <div class="video2">
+                <img class="img-fluid" src="/BootstrapFigma/images/videoimage.png" alt="">
+              </div>
             </div>
           </div>
         </div>
@@ -196,7 +200,7 @@
 
       <div class="container">
         <div class="row package justify-content-center align-items-center">
-          <div class="col-4 g-5">
+          <div class="col-sm-12 col-md-6 col-lg-4  g-5">
             <div class="p-5 pcol">
               <img src="/BootstrapFigma/images/Group 37.png" alt="">
               <h4>High Quality Profiles</h4>
@@ -208,7 +212,7 @@
               </p>
             </div>
           </div>
-          <div class="col-4 g-5">
+          <div class="col-sm-12 col-md-6 col-lg-4 g-5">
             <div class="p-5 pcol">
               <img src="/BootstrapFigma/images/Group 38.png" alt="">
               <h4>Instant Delivery</h4>
@@ -219,7 +223,7 @@
               </p>
             </div>
           </div>
-          <div class="col-4 g-5">
+          <div class="col-sm-12 col-md-6 col-lg-4 g-5">
             <div class="p-5 pcol">
               <img src="/BootstrapFigma/images/Group 41.png" alt="">
               <h4>24/7 Customer Support</h4>
@@ -254,7 +258,7 @@
 
       <div class="container">
         <div class="row package justify-content-center align-items-center">
-          <div class="col-4 g-5 ">
+          <div class="col-sm-12 col-md-6 col-lg-4 g-5 ">
             <div class="p-5 insta_work">
               <h5>Save $2</h5>
               <h4>Instagram Followers</h4>
@@ -266,7 +270,7 @@
               <button type="button" class="btn px-5 py-2">Purchase</button>
             </div>
           </div>
-          <div class="col-4 g-5">
+          <div class="col-sm-12 col-md-6 col-lg-4 g-5">
             <div class="p-5 insta_work">
               <h5>Save $2</h5>
               <h4>Instagram Comments</h4>
@@ -278,7 +282,7 @@
               <button type="button" class="btn px-5 py-2">Purchase</button>
             </div>
           </div>
-          <div class="col-4 g-5">
+          <div class="col-sm-12 col-md-6 col-lg-4 g-5">
             <div class="p-5 insta_work">
               <h5>Save $2</h5>
               <h4>Instagram Likes</h4>
@@ -409,7 +413,7 @@
 
       <div class="container">
         <div class="row package justify-content-center align-items-center">
-          <div class="col-6 g-5 ">
+          <div class="col-sm-12 col-md-6 g-5 ">
             <div class="accordion" id="accordionExample">
               <div class="accordion-item">
                 <h2 class="accordion-header">
@@ -459,8 +463,8 @@
             </div>
 
           </div>
-          <div class="col-6 g-5">
-            <div class="accordion" id="accordionExample">
+          <div class="col-sm-12 col-md-6 g-5">
+            <div class="accordion" id="accordionExample1">
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -468,7 +472,7 @@
                     Will I Lose My Followers If I Cancel?
                   </button>
                 </h2>
-                <div id="collapseFour" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div id="collapseFour" class="accordion-collapse collapse show" data-bs-parent="#accordionExample1">
                   <div class="accordion-body">
                     However, if they see other members in their social network actively participating, it makes
                     investing time into a social media profile both fun and easy. Pump Insta is here to help! it makes
@@ -483,7 +487,7 @@
                     How Fast Will I See Results?
                   </button>
                 </h2>
-                <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample1">
                   <div class="accordion-body">
                     However, if they see other members in their social network actively participating, it makes
                     investing time into a social media profile both fun and easy. Pump Insta is here to help! it makes
@@ -498,7 +502,7 @@
                     Are The Followers Real?
                   </button>
                 </h2>
-                <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample1">
                   <div class="accordion-body">
                     However, if they see other members in their social network actively participating, it makes
                     investing time into a social media profile both fun and easy. Pump Insta is here to help! it makes
@@ -521,7 +525,7 @@
   <section class="botton">
     <div class="container">
       <div class="row d-flex frow">
-        <div class="col-4 px-5 footer_logo">
+        <div class="col-sm-12 col-md-6 col-lg-4 px-5 footer_logo">
           <img src="/BootstrapFigma/images/Logo.png" alt="">
           <p>However, if they see other members in their social network actively participating, it makes investing time
             into a social.</p>
@@ -530,7 +534,7 @@
             <img src="/BootstrapFigma/images/linkedin-icon 1.png" alt="">
           </div>
         </div>
-        <div class="col-4 px-5">
+        <div class="col-sm-12 col-md-6 col-lg-4 px-5">
           <div class="policy">
             <h5>Our Policy</h5>
             <ul>
@@ -550,7 +554,7 @@
           </div>
 
         </div>
-        <div class="col-4 px-5">
+        <div class="col-sm-12 col-md-6 col-lg-4 px-5">
           <div class="signup">
             <h5>Sign Up & Save</h5>
             <p>However, if they see other members in their social network actively.</p>
